// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack \`basic-test\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`basic-test\` Build results: Webpack build files 1`] = `
Object {
  "bar.asset.php": Object {},
  "bar.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "baz.asset.php": Object {},
  "baz.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "main.asset.php": Object {},
  "main.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

\\"use strict\\";
module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"basic-test\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
  "noI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
}
`;

exports[`Webpack \`basic-test\` Build results: Webpack build stats 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`Webpack \`ignore-modules\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`ignore-modules\` Build results: Webpack build files 1`] = `
Object {
  "array/hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "array/hasI18n2.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "array/main.asset.php": Object {},
  "array/main.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "array/main2.asset.php": Object {},
  "array/main2.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

\\"use strict\\";
module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n2\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"ignore-modules\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
  "array/noI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "function/hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "function/hasI18n2.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "function/main.asset.php": Object {},
  "function/main.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "function/main2.asset.php": Object {},
  "function/main2.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

\\"use strict\\";
module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n2\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"ignore-modules\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
  "function/noI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "regex/hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "regex/hasI18n2.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "regex/main.asset.php": Object {},
  "regex/main.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "regex/main2.asset.php": Object {},
  "regex/main2.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

\\"use strict\\";
module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n2\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"ignore-modules\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
  "regex/noI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "string/hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "string/hasI18n2.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "string/main.asset.php": Object {},
  "string/main.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "string/main2.asset.php": Object {},
  "string/main2.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

\\"use strict\\";
module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n2\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"ignore-modules\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
  "string/noI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
}
`;

exports[`Webpack \`ignore-modules\` Build results: Webpack build stats 1`] = `
Object {
  "children": Array [
    Object {
      "errors": Array [],
      "name": undefined,
      "warnings": Array [],
    },
    Object {
      "errors": Array [],
      "name": undefined,
      "warnings": Array [],
    },
    Object {
      "errors": Array [],
      "name": undefined,
      "warnings": Array [],
    },
    Object {
      "errors": Array [],
      "name": undefined,
      "warnings": Array [],
    },
  ],
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`Webpack \`loader-failures\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`loader-failures\` Build results: Webpack build files 1`] = `
Object {
  "a.asset.php": Object {},
  "a.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

\\"use strict\\";
module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"loader-failures\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
  "hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
}
`;

exports[`Webpack \`loader-failures\` Build results: Webpack build stats 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`Webpack \`manual-externals\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`manual-externals\` Build results: Webpack build files 1`] = `
Object {
  "hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "main.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!*******************************!*\\\\
  !*** external \\"jpI18nLoader\\" ***!
  \\\\*******************************/
/***/ ((module) => {

\\"use strict\\";
module.exports = global[\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"manual-externals\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
}
`;

exports[`Webpack \`manual-externals\` Build results: Webpack build stats 1`] = `
Object {
  "children": Array [
    Object {
      "errors": Array [],
      "name": undefined,
      "warnings": Array [],
    },
  ],
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`Webpack \`missing-externals\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`missing-externals\` Build results: Webpack build stats 1`] = `
Object {
  "children": Array [
    Object {
      "errors": Array [
        Object {
          "message": "@automattic/i18n-loader-webpack-plugin:
Failed to add loader module @wordpress/jp-i18n-loader to the build.
You'll need to add @wordpress/dependency-extraction-webpack-plugin or an appropriate externals directive to your Webpack config.",
        },
      ],
      "name": undefined,
      "warnings": Array [
        Object {
          "loc": "",
          "message": "Module not found: Error: Can't resolve '@wordpress/jp-i18n-loader' in '/path/to/i18n-loader-webpack-plugin/tests/fixtures/missing-externals'",
        },
      ],
    },
    Object {
      "errors": Array [
        Object {
          "message": "@automattic/i18n-loader-webpack-plugin:
Failed to add loader module missingloader to the build.
You'll need to add the appropriate externals directive to your Webpack config.",
        },
      ],
      "name": undefined,
      "warnings": Array [
        Object {
          "loc": "",
          "message": "Module not found: Error: Can't resolve 'missingloader' in '/path/to/i18n-loader-webpack-plugin/tests/fixtures/missing-externals'",
        },
      ],
    },
  ],
  "errors": Array [
    Object {
      "compilerPath": undefined,
      "message": "@automattic/i18n-loader-webpack-plugin:
Failed to add loader module @wordpress/jp-i18n-loader to the build.
You'll need to add @wordpress/dependency-extraction-webpack-plugin or an appropriate externals directive to your Webpack config.",
    },
    Object {
      "compilerPath": undefined,
      "message": "@automattic/i18n-loader-webpack-plugin:
Failed to add loader module missingloader to the build.
You'll need to add the appropriate externals directive to your Webpack config.",
    },
  ],
  "warnings": Array [
    Object {
      "compilerPath": undefined,
      "loc": "",
      "message": "Module not found: Error: Can't resolve '@wordpress/jp-i18n-loader' in '/path/to/i18n-loader-webpack-plugin/tests/fixtures/missing-externals'",
    },
    Object {
      "compilerPath": undefined,
      "loc": "",
      "message": "Module not found: Error: Can't resolve 'missingloader' in '/path/to/i18n-loader-webpack-plugin/tests/fixtures/missing-externals'",
    },
  ],
}
`;

exports[`Webpack \`multiple-runtime\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`multiple-runtime\` Build results: Webpack build files 1`] = `
Object {
  "bar.asset.php": Object {},
  "bar.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "baz.asset.php": Object {},
  "baz.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "hasI18n2.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "main.asset.php": Object {},
  "main.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "main2.asset.php": Object {},
  "main2.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "noI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "runtime~bar.asset.php": Object {},
  "runtime~bar.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "runtime~baz.asset.php": Object {},
  "runtime~baz.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "runtime~main.asset.php": Object {},
  "runtime~main.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"multiple-runtime\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
  "runtime~main2.asset.php": Object {},
  "runtime~main2.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n\\": 0,
/******/ 			\\"hasI18n2\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"multiple-runtime\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
}
`;

exports[`Webpack \`multiple-runtime\` Build results: Webpack build stats 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`Webpack \`nested-includes\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`nested-includes\` Build results: Webpack build files 1`] = `
Object {
  "hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "indirect1.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "indirect2.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "main.asset.php": Object {},
  "main.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

\\"use strict\\";
module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"nested-includes\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
}
`;

exports[`Webpack \`nested-includes\` Build results: Webpack build stats 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`Webpack \`no-textdomain\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`no-textdomain\` Build results: Webpack build stats 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "Chunk dist/main.js has submodules using @wordpress/i18n, but no textdomain was passed to @automattic/i18n-loader-webpack-plugin. Please fix your Webpack configuration.",
      "moduleIdentifier": "webpack/runtime/loading @automattic/i18n-loader-webpack-plugin",
      "moduleName": "webpack/runtime/loading @automattic/i18n-loader-webpack-plugin",
    },
  ],
  "warnings": Array [],
}
`;

exports[`Webpack \`no-textdomain-no-i18n\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`no-textdomain-no-i18n\` Build results: Webpack build files 1`] = `
Object {
  "bar.asset.php": Object {},
  "bar.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "baz.asset.php": Object {},
  "baz.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "noI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
}
`;

exports[`Webpack \`no-textdomain-no-i18n\` Build results: Webpack build stats 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`Webpack \`options\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`options\` Build results: Webpack build files 1`] = `
Object {
  "hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "main.js": Object {
    "jpI18nState": null,
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! loader */ \\"loader\\");
/******/ 			if ( loader && loader.doload )
/******/ 				return loader.doload( \\"jetpack_vendor/automattic/jetpack-foobar/dist/\\" + __webpack_require__.u( chunkId ), \\"options\\", \\"core\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting loader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
  "main2.asset.php": Object {},
  "main2.js": Object {
    "jpI18nState": null,
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/i18n */ \\"@wordpress/i18n\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"options\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.i18n.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
}
`;

exports[`Webpack \`options\` Build results: Webpack build stats 1`] = `
Object {
  "children": Array [
    Object {
      "errors": Array [],
      "name": undefined,
      "warnings": Array [],
    },
    Object {
      "errors": Array [],
      "name": undefined,
      "warnings": Array [],
    },
  ],
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`Webpack \`single-runtime\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`single-runtime\` Build results: Webpack build files 1`] = `
Object {
  "bar.asset.php": Object {},
  "bar.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "baz.asset.php": Object {},
  "baz.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "hasI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "hasI18n2.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "main.asset.php": Object {},
  "main.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "main2.asset.php": Object {},
  "main2.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "noI18n.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "runtime.asset.php": Object {},
  "runtime.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"hasI18n\\": 0,
/******/ 			\\"hasI18n2\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"single-runtime\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
}
`;

exports[`Webpack \`single-runtime\` Build results: Webpack build stats 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`Webpack \`splitting\` Build results: Webpack build error 1`] = `null`;

exports[`Webpack \`splitting\` Build results: Webpack build files 1`] = `
Object {
  "indirect1.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "indirect2.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
  "main.asset.php": Object {},
  "main.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

\\"use strict\\";
module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"src_hasI18n_js-src_hasI18n2_js\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"splitting\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
  "main2.asset.php": Object {},
  "main2.js": Object {
    "jpI18nState": "/***/ \\"@wordpress/jp-i18n-loader\\":
/*!**************************************!*\\\\
  !*** external [\\"wp\\",\\"jpI18nLoader\\"] ***!
  \\\\**************************************/
/***/ ((module) => {

\\"use strict\\";
module.exports = window[\\"wp\\"][\\"jpI18nLoader\\"];
",
    "loader": "/******/ 	/* webpack/runtime/loading @automattic/i18n-loader-webpack-plugin */
/******/ 	(() => {
/******/ 		var installedChunks = {
/******/ 			\\"src_hasI18n_js-src_hasI18n2_js\\": 0
/******/ 		};
/******/ 		
/******/ 		var loadI18n = (chunkId) => {
/******/ 			var loader = __webpack_require__(/*! @wordpress/jp-i18n-loader */ \\"@wordpress/jp-i18n-loader\\");
/******/ 			if ( loader && loader.downloadI18n )
/******/ 				return loader.downloadI18n( \\"dist/\\" + __webpack_require__.u( chunkId ), \\"splitting\\", \\"plugin\\" );
/******/ 			return Promise.reject( new Error( \\"I18n loader is not available. Check that WordPress is exporting wp.jpI18nLoader.\\" ) );
/******/ 		};
/******/ 		
/******/ 		__webpack_require__.f.wpI18n = (chunkId, promises) => {
/******/ 			if ( installedChunks[chunkId] ) {
/******/ 				promises.push( installedChunks[chunkId] );
/******/ 			} else if ( installedChunks[chunkId] === 0 ) {
/******/ 				promises.push( installedChunks[chunkId] = loadI18n( chunkId ).then(
/******/ 					() => {
/******/ 						installedChunks[chunkId] = false;
/******/ 					},
/******/ 					(e) => {
/******/ 						installedChunks[chunkId] = 0;
/******/ 						// Log only, we don't want i18n failure to break the entire page.
/******/ 						console.error( \\"Failed to fetch i18n data: \\", e );
/******/ 					}
/******/ 				) );
/******/ 			}
/******/ 		};
/******/ 	})();",
  },
  "src_hasI18n_js-src_hasI18n2_js.js": Object {
    "jpI18nState": null,
    "loader": null,
  },
}
`;

exports[`Webpack \`splitting\` Build results: Webpack build stats 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;
